--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
    <!--   <app-product [product]="products[0]"></app-product>-->
    <!--   <app-product [product]="products[1]"></app-product>-->
    <p *ngIf="loading" class="text-center text-lg">Loading...</p>
-   <app-product *ngFor="let product of products" [product]="product"></app-product>
+   <app-product *ngFor="let product of products$ | async" [product]="product"></app-product>
 </div>
