--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 .inp {
-  outline: none;
-  border: 1px solid lightskyblue;
-  border-radius: 5px;
-  padding: 7px 10px;
+  @apply py-2 px-3 bg-blue-50 rounded border-2 border-blue-500 focus:outline-green-500 w-1/3 my-2
+}
+.btn {
+  @apply py-4 px-5 bg-pink-500 rounded w-1/3 hover:bg-pink-600 font-bold text-white
+}
+.isRedBox {
+  @apply bg-red-500 w-1/3 h-1/2 rounded my-3
 }
